components/monitoring/prometheus/staging/stone-stg-rh01/poc/alloy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appstudio-alloy-poc
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
  labels:
    app.kubernetes.io/part-of: alloy-poc
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
